--- a/css/Config.css
+++ b/css/Config.css
@@ -1,5 +1,4 @@
-input[type="color"]{
-    
+input[type="color"] {
     width: 70px;
     border-radius: 100px;
     -webkit-appearance: none;
@@ -7,12 +6,12 @@ input[type="color"]{
     border: none;
     appearance: none;
     background-color: transparent;
-    cursor:pointer;
+    cursor: pointer;
     padding: 0;
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
-    
+
     width: 70px;
     padding: 0;
     border-radius: 100px;
@@ -23,9 +22,65 @@ input[type="color"]::-webkit-color-swatch {
     border: none;
     padding: 0;
     border-radius: 100px;
-    
+
 }
 
+#cor_title {
+    position: relative;
+    top: -7vw;
+    left: 1vw;
+}
+
+#cor_hr {
+    position: absolute;
+    width: 16vw;
+    top: 10vw;
+    background-color: aliceblue;
+    margin-left: 1vw;
+}
+
+#Cores {
+    width: 20vw;
+    height: 40vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.area_cor {
+    position: relative;
+    background-color: #e0a555;
+    width: 75px;
+    height: 38px;
+    top: -100px;
+    margin-left: 0vw;
+    border-radius: 20px;
+    transition: 0.5s;
+    font-size: large;
+    transition: .5s;
+    margin-top: 2vw;
+    float: left;
+    left: 3vw;
+    display: flex;
+    align-items: center;
+}
+
+.color_formato {
+    width: 60px;
+    height: 35px !important;
+    position: relative;
+    float: left;
+    left: -4.83vw;
+}
+
+.color_label {
+    position: relative;
+    right: 2vw;
+    width: 0vw;
+    overflow: hidden;
+}
+
+/* 
 #bgColor{
     width: 60px;
     height: 35px;
@@ -33,11 +88,11 @@ input[type="color"]::-webkit-color-swatch {
     top: 40px;
     left: 70px;
 }
-
 #msgCliente{
     width: 60px;
     height: 35px;
     position: relative;
+    left: -4.8vw;
 }
 
 #msgcColor{
@@ -60,18 +115,21 @@ input[type="color"]::-webkit-color-swatch {
     position: relative;
     top: 35px;
     left: 46px;
+} */
+.area_cor:hover {
+    border-radius: 20px;
+    width: 18vw;
+    height: 38px;
 }
 
-.area_cor{
-    position: relative;
-    background-color: #e0a555;
-    width: 20vw;
-    height: fit-content;
-    top: 54px;
-    margin-left: 1vw;
+.area_cor:hover .color_label {
+    content-visibility: visible;
+    transition: .5s;
+    right: 2vw;
+    width: 8vw;
 }
 
-#headerBot{
+#headerBot {
     width: 60px;
     height: 35px;
     position: relative;
@@ -79,9 +137,7 @@ input[type="color"]::-webkit-color-swatch {
     left: 70px;
 }
 
-
-
-#config_header{
+#config_header {
     position: relative;
     top: 0px;
     padding-top: 1px;
@@ -97,13 +153,12 @@ input[type="color"]::-webkit-color-swatch {
     border-bottom-right-radius: 0%;
 }
 
-#janela_config{
+#janela_config {
     position: absolute;
     top: -1vw;
-    left: 190px;
+    left: 170px;
     width: 40vw;
-    height: 54vw;
-    border: 1px solid black;
+    height: 50vw;
     /* display: none; */
     background-color: rgb(28, 34, 36);
     color: white;
@@ -114,38 +169,29 @@ input[type="color"]::-webkit-color-swatch {
     border-radius: 20px;
 }
 
-.Formato{
-    border-radius: 100px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    border: none;
-    appearance: none;
-    background-color: transparent;
-    cursor:pointer;
-    padding: 0;
-}
-
-#navButton_fec{
+#navButton_fec {
     visibility: hidden;
-    background-color: blue;
 }
 
-.butts{
-    position: absolute;
+.butts {
+    position: fixed;
     width: 45px;
     height: 45px;
     border-radius: 100%;
     cursor: pointer;
     transform: rotate(90deg);
     font-size: large;
-    background-color: red;
+    background-color: rgb(204, 184, 184);
+    top: 5vw;
+    left: 5vw;
+    z-index: 3;
 }
 
-.janelaAtt{
+.janelaAtt {
     animation: janela 1s forwards;
 }
 
-.janeladAtt{
+.janeladAtt {
     animation: janela 1s reverse;
 }
 
@@ -167,7 +213,7 @@ input[type="color"]::-webkit-color-swatch {
     }
 } */
 
-#logo1{
+#logo1 {
     left: 60px;
     width: 250px;
     height: 250px;
@@ -175,80 +221,39 @@ input[type="color"]::-webkit-color-swatch {
     background-repeat: no-repeat;
     background-size: cover;
     image-resolution: initial;
-    position:absolute;
+    position: absolute;
     overflow: hidden;
 }
 
-.imginput{
-    width: 50px;
-    height: 50px;
+#backgrounds {
+    position: relative;
+    width: 20vw;
+    height: 30vw;
+    top: -40vw;
+    float: right;
+}
+
+.imgsArea {
+    width: 100%;
+    height: 10vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.imgShow {
+    width: 140px;
+    height: 100px;
     background-color: gray;
     position: relative;
-    float: right;
 }
 
-.NovasPerguntas{
-    width: 50px;
-    height: 90px;
-    background-color: gray;
-}
-
-
-#msgEmpresa{
-    width: 60px;
-    height: 35px;
+.imgInput {
     position: relative;
-    top: 50px;
-    left: 70px;
 }
 
-
-#img1{
-    top: -340px;
-    width: 140px;
-    height: 100px;
-    right: 40px;
-}
-
-#text1{
-    position: relative;
-    float: right;
-    top: -225px;
-    left: 115px;
-    height: 17px;
-}
-
-#img2{
-    top: -175px;
-    left: 270px;
-    width: 140px;
-    height: 100px;
-}
-
-#text2{
-    position: relative;
-    float: right;
-    top: -160px;
-    right: 26px;
-    height: 17px;
-}
-
-#img3{
-    top: -110px;
-    left: 130px;
-    width: 140px;
-    height: 100px;
-}
-
-#text3{
-    position: relative;
-    float: right;
-    top: 5px;
-    left: 282px;
-    height: 17px;
-}
-
-#text4{
+#text4 {
     position: relative;
     float: left;
     top: 57px;
@@ -256,7 +261,13 @@ input[type="color"]::-webkit-color-swatch {
     left: 85px;
 }
 
-#pergunta{
+.NovasPerguntas {
+    width: 50px;
+    height: 90px;
+    background-color: gray;
+}
+
+#pergunta {
     position: relative;
     float: left;
     top: 72px;
@@ -266,7 +277,7 @@ input[type="color"]::-webkit-color-swatch {
     background-color: gray;
 }
 
-#text5{
+#text5 {
     position: relative;
     float: right;
     top: -20px;
@@ -274,7 +285,7 @@ input[type="color"]::-webkit-color-swatch {
     right: 80px;
 }
 
-#resposta{
+#resposta {
     position: relative;
     float: right;
     top: 17px;
