--- a/css/folha.css
+++ b/css/folha.css
@@ -140,7 +140,6 @@ input[type="color"]{
 .menarea{
     width: 100%;
     height: 7vw;
-    border: #000 solid 1px;
 }
 
 .mensagem {
@@ -165,7 +164,7 @@ input[type="color"]{
 
 .cliente {
     border-top-right-radius: 0;
-    animation: expandir 1s forwards;
+    animation: expandir .8s forwards;
     float:right;
 }
 
@@ -173,7 +172,7 @@ input[type="color"]{
     background-color: rgb(112, 173, 231) !important;
     left: 7vw;
     border-top-left-radius: 0;
-    animation: expandir 1s forwards 1s;
+    animation: expandir .8s forwards 1s;
     visibility: hidden;
     float: left;
 }
@@ -255,7 +254,7 @@ input[type="color"]{
 }
 
 .fundos_ativado {
-   animation: cor 0.5s forwards;
+   animation: cor 1s forwards;
 }
 
 .texto {
