--- a/css/Config.css
+++ b/css/Config.css
@@ -44,6 +44,7 @@ input[type="color"]::-webkit-color-swatch {
     height: 40vw;
     display: flex;
     flex-direction: column;
+    background-color: #002feb;
     justify-content: center;
 }
 
@@ -157,8 +158,8 @@ input[type="color"]::-webkit-color-swatch {
     position: absolute;
     top: -1vw;
     left: 170px;
-    width: 40vw;
-    height: 50vw;
+    width: 50vw;
+    height: fit-content;
     /* display: none; */
     background-color: rgb(28, 34, 36);
     color: white;
@@ -240,6 +241,7 @@ input[type="color"]::-webkit-color-swatch {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #e0a555;
 }
 
 .imgShow {
@@ -253,44 +255,45 @@ input[type="color"]::-webkit-color-swatch {
     position: relative;
 }
 
-#text4 {
+/* Novos Arrays */
+
+#array_area {
     position: relative;
-    float: left;
-    top: 57px;
-    height: 17px;
-    left: 85px;
+    width: 100%;
+    height: fit-content;
+    background-color: aqua;
+    top: -20vw;
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
-.NovasPerguntas {
-    width: 50px;
-    height: 90px;
-    background-color: gray;
+.novo_array {
+    position: relative;
+    background-color: red;
+    width: 100%;
+    top: -2vw;
+    display: inline-flexbox;
+    align-items: center;
+    justify-content: center;
 }
 
-#pergunta {
-    position: relative;
-    float: left;
-    top: 72px;
-    left: 90px;
-    width: 160px;
-    height: 100px;
-    background-color: gray;
+.array_input {
+    margin-top: -0vw;
+    width: 100%;
+    border-radius: 3px;
+    outline: none;
+    
 }
 
-#text5 {
-    position: relative;
-    float: right;
-    top: -20px;
-    height: 17px;
-    right: 80px;
+.array_show {
+    background-color: blue;
+    width: 100%;
+    height: 1vw;
+    margin-top: vw;
 }
 
-#resposta {
-    position: relative;
-    float: right;
-    top: 17px;
-    left: 85px;
-    width: 160px;
-    height: 100px;
-    background-color: gray;
-}
+#resposta_input {}
+
+#resposta_show {}
