--- a/css/Config.css
+++ b/css/Config.css
@@ -1,3 +1,7 @@
+input{
+    outline: none;
+}
+
 input[type="color"] {
     width: 70px;
     border-radius: 100px;
@@ -44,8 +48,8 @@ input[type="color"]::-webkit-color-swatch {
     height: 40vw;
     display: flex;
     flex-direction: column;
-    background-color: #002feb;
     justify-content: center;
+    margin: 1vw;
 }
 
 .area_cor {
@@ -159,7 +163,7 @@ input[type="color"]::-webkit-color-swatch {
     top: -1vw;
     left: 170px;
     width: 50vw;
-    height: fit-content;
+    height: fit-content !important;
     /* display: none; */
     background-color: rgb(28, 34, 36);
     color: white;
@@ -241,13 +245,11 @@ input[type="color"]::-webkit-color-swatch {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #e0a555;
 }
 
 .imgShow {
     width: 140px;
     height: 100px;
-    background-color: gray;
     position: relative;
 }
 
@@ -260,18 +262,16 @@ input[type="color"]::-webkit-color-swatch {
 #array_area {
     position: relative;
     width: 100%;
-    height: fit-content;
-    background-color: aqua;
-    top: -20vw;
+    top: -30vw;
     display: inline-flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
 }
 
 .novo_array {
     position: relative;
-    background-color: red;
     width: 100%;
     top: -2vw;
     display: inline-flexbox;
@@ -282,23 +282,22 @@ input[type="color"]::-webkit-color-swatch {
 .array_input {
     margin-top: -0vw;
     width: 100%;
+    height: 2.4vw;
     border-radius: 3px;
     outline: none;
-    
+    border: none;
 }
 
 .array_show {
     background-color: blue;
     width: 100%;
     height: 1vw;
-    margin-top: vw;
+    word-break: break-word;
 }
 
 .vetor{
     width: 100%;
     height: fit-content;
-    background-color: green;
+    border: .01vw solid rgb(21, 4, 13);
+    background-color: rgb(76, 156, 178);
 }
-
-#resposta_input {}
-#resposta_show {}
