--- a/css/Config.css
+++ b/css/Config.css
@@ -1,3 +1,16 @@
+.button{
+    width: 4vw;
+    height: 3vw;
+    background-color: gray;
+    text-align: center;
+}
+
+.fotinha{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
 input{
     outline: none;
 }
@@ -15,7 +28,6 @@ input[type="color"] {
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
-
     width: 70px;
     padding: 0;
     border-radius: 100px;
@@ -54,7 +66,7 @@ input[type="color"]::-webkit-color-swatch {
 
 .area_cor {
     position: relative;
-    background-color: #e0a555;
+    background-color: rgb(86, 86, 87);
     width: 75px;
     height: 38px;
     top: -100px;
@@ -85,42 +97,50 @@ input[type="color"]::-webkit-color-swatch {
     overflow: hidden;
 }
 
-/* 
-#bgColor{
-    width: 60px;
-    height: 35px;
-    position: relative;
-    top: 40px;
-    left: 70px;
-}
-#msgCliente{
-    width: 60px;
-    height: 35px;
-    position: relative;
-    left: -4.8vw;
+.tcEmp{
+background-color: aliceblue;
+top: 22vw !important;
 }
 
-#msgcColor{
-    position: relative;
+.msgButt{
+    position: absolute;
+    top: 17.5vw;
+    left: 4.8vw;
+    width: 3vw;
+    height: 1.3vw;
+    background-color: rgb(86, 86, 87);
+    border-radius: 3vw;
+    overflow: hidden;
 }
 
-#msgbColor{
-    position: relative;
-    top: 60px;
-    left: 90px;
+.msgBut{
+    position: absolute;
+    top: -1vw;
+    left: -.3vw;
+    width: 4.2vw;
+    height: 4.2vw;
+    float: right;
+    opacity: 0;
+    z-index: 2;
 }
 
-#bodyColor{
-    position: relative;
-    top: 45px;
-    left: 25px;
+.msgBut:checked  + .ball{
+    left: 0vw;
+    background-color: aliceblue;
 }
 
-#hBotColor{
+.ball{
     position: relative;
-    top: 35px;
-    left: 46px;
-} */
+    margin-top: .05vw;
+    background-color: black;
+    width: 1.2vw;
+    height: 1.2vw;
+    border-radius: 100%;
+    left: 1.8vw;
+    float: left;
+    transition: .5s;
+}
+
 .area_cor:hover {
     border-radius: 20px;
     width: 18vw;
@@ -164,7 +184,7 @@ input[type="color"]::-webkit-color-swatch {
     left: 170px;
     width: 50vw;
     height: fit-content !important;
-    /* display: none; */
+    display: none;
     background-color: rgb(28, 34, 36);
     color: white;
     font-family: Calibri, 'Trebuchet MS', sans-serif;
@@ -179,7 +199,7 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .butts {
-    position: fixed;
+    position: absolute;
     width: 45px;
     height: 45px;
     border-radius: 100%;
@@ -255,6 +275,7 @@ input[type="color"]::-webkit-color-swatch {
 
 .imgInput {
     position: relative;
+    margin-top: -1vw;
 }
 
 /* Novos Arrays */
@@ -281,23 +302,49 @@ input[type="color"]::-webkit-color-swatch {
 
 .array_input {
     margin-top: -0vw;
-    width: 100%;
+    width: 90%;
     height: 2.4vw;
     border-radius: 3px;
     outline: none;
     border: none;
+    margin-left: 1.2vw;
 }
 
 .array_show {
-    background-color: blue;
     width: 100%;
     height: 1vw;
     word-break: break-word;
+    margin-top: .3vw;
 }
 
 .vetor{
-    width: 100%;
+    width: 90%;
     height: fit-content;
     border: .01vw solid rgb(21, 4, 13);
-    background-color: rgb(76, 156, 178);
+    margin-left: 1.2vw;
+    background-color: rgb(70, 70, 228);
+
+}
+
+.del{
+    width: 17%;
+    height: 1.8vw;
+    background-color: rgb(255, 0, 21);
+    text-align: center;
+    position: absolute;
+    margin-left:100%;
+    margin-top: -2.6vw;
+    cursor: pointer;
+    border-radius: 10%;
+}
+
+#envie{
+    position: relative;
+    top: -3vw;
+    border-radius: 10%;
+    background-color: rgb(0, 255, 128);
+    border:none;
+    width: 15%;
+    height: 1.5vw;
+    color: black;
 }
