--- a/css/Config.css
+++ b/css/Config.css
@@ -326,33 +326,48 @@ top: 22vw !important;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-
+    background-color: #414040;
+    height: 18vw;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .novo_array {
     position: relative;
     width: 100%;
-    top: -2vw;
     display: inline-flexbox;
     align-items: center;
     justify-content: center;
 }
 
 .array_input {
-    margin-top: -0vw;
-    width: 90%;
+    width: 44.5%;
     height: 2.4vw;
     border-radius: 3px;
     outline: none;
     border: none;
     margin-left: 1.2vw;
+    position: fixed;
+    top: 57vw;
 }
 
 .array_show {
     width: 100%;
-    height: 1vw;
+    height: 15vw;
     word-break: break-word;
-    margin-top: .3vw;
+    margin-top: 4vw;
+}
+
+#envie{
+    position: fixed;
+    top: -2.7vw;
+    border-radius: 10%;
+    background-color: rgb(0, 255, 128);
+    border:none;
+    width: 3%;
+    height: 2.0vw;
+    color: black;
+    top: 57vw;
 }
 
 .vetor{
@@ -365,24 +380,72 @@ top: 22vw !important;
 }
 
 .del{
-    width: 17%;
+    width: 5%;
     height: 1.8vw;
     background-color: rgb(255, 0, 21);
     text-align: center;
     position: absolute;
-    margin-left:100%;
+    margin-left:97%;
     margin-top: -2.6vw;
     cursor: pointer;
     border-radius: 10%;
 }
 
-#envie{
+
+#quest_area{
     position: relative;
-    top: -3vw;
-    border-radius: 10%;
+    top: -11vw;
+    background-color: rgb(63, 63, 63);
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+#quest_input{
+    margin-top: -0vw;
+    width: 80%;
+    height: 2.4vw;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    margin-left: 1.2vw;
+}
+
+#envieQ{
+    position: relative;
+    border-radius: 3px;
     background-color: rgb(0, 255, 128);
     border:none;
-    width: 15%;
-    height: 1.5vw;
+    width: 10%;
+    height: 2.4vw;
     color: black;
+    margin-left: 1vw;
+}
+
+.quest_show {
+    width: 100%;
+    height: 15vw;
+    overflow: scroll;
+    overflow-x: hidden;
+    word-break: break-word;
+    margin-top: .3vw;
+}
+
+.vetorN{
+    width: 80%;
+    height: fit-content;
+    border: .01vw solid rgb(21, 4, 13);
+    margin-left: 1.2vw;
+    background-color: rgb(70, 70, 228);
+}
+
+.delN{
+    width: 10%;
+    height: 2.4vw;
+    background-color: rgb(255, 0, 21);
+    text-align: center;
+    position: relative;
+    margin-left:84%;
+    margin-top: -2.6vw;
+    cursor: pointer;
+    border-radius: 10%;
 }
