--- a/css/folha.css
+++ b/css/folha.css
@@ -61,6 +61,29 @@ input[type="color"]{
     background-color: transparent;
     cursor:pointer
 }
+
+#recomeco{
+position: absolute;
+width: 7vw;
+height: 2vw;
+background-color: yellow;
+color: #000;
+top: 17vw;
+right: 10vw;
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: .2vw;
+transition: .5s;
+cursor: pointer;
+}
+
+#recomeco:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 20px 5px rgb(255, 255, 55);
+}
+
+
 /* Barra de Navegação */
 #nav_butt {
     position: fixed;
@@ -180,7 +203,7 @@ input[type="color"]{
     color: #000;
     padding: 20px;
     position: relative;
-    margin-top: 0px;
+    margin-top: 20px;
     margin-right: 10vw;
     transition: 0s;
     max-height: 1vw;
