--- a/css/Config.css
+++ b/css/Config.css
@@ -236,23 +236,24 @@ top: 22vw !important;
     animation: janela 1s reverse;
 }
 
-/* @keyframes janela {
+@keyframes janela {
     from {
     width: 1vw;
     height: 1vw;
     border: 1px solid black;
     display:none;
     border-radius: 100%;
+    overflow: hidden;
     }
 
     to {
-    width: 40vw;
-    height: 48vw;
+    width: 50vw;
+    height: fit-content;
     border: 1px solid black;
-    display:inherit;
-    border-radius: 0%;
+    display:block;
+    border-radius: 20px;
     }
-} */
+}
 
 #logo1 {
     left: 60px;
@@ -281,6 +282,7 @@ top: 22vw !important;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 1vw;
 }
 
 .imgShow {
