--- a/css/geral.css
+++ b/css/geral.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("img/Tabela\ de\ configuração.jpg");
+  background-image: url("../imgs/Tabela\ de\ configuração.jpg");
   background-repeat: no-repeat; 
   background-size: 1490px 760px;;
   width: 10%;
@@ -20,19 +20,24 @@ body {
   margin-left: 10cm;
   font-size: 25px;
   text-align: center;
+  src: url(../imgs/body.jpg);
   }
 
   
 
 @font-face {
-    src: url(FingerPaint-Regular.ttf);
+    src: url(./fonts/FingerPaint-Regular.ttf);
     font-family: 'FingerPaint';    
     font-weight: normal;
 } 
 
 body{
 	font-family: FingerPaint; 
- 
+   width: 90% !important;
+}
+
+#corpo{
+  transform: scale(.8);
 }
 
 .Login{
